# berlin-insider

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
docs/: idea.md  sources.md
src/berlin_insider/: __init__.py  cli.py  cli_parser.py  cli_render.py  digest.py  pipeline.py  worker.py
tests/: conftest.py  test_adapter_detail_integration.py  test_cli_curate.py  test_cli_feedback.py  test_cli_parse.py  test_cli_schedule.py  test_cli_worker.py  test_content_store.py  test_curator_orchestrator.py  test_curator_scoring.py  test_detail_cache_store.py  test_detail_enrichment.py  test_feedback_messages.py  test_feedback_poller.py  test_feedback_webhook.py  test_formatter_telegram.py  test_html_adapters.py  test_messenger_telegram.py  test_orchestrator.py  test_parser_normalize.py  test_parser_orchestrator.py  test_parser_summarizer.py  test_pipeline_cache_integration.py  test_public_site.py  test_rss_adapter.py  test_scheduler_due_check.py  test_scheduler_orchestrator.py  test_scheduler_store.py  test_smoke_all_sources_curate.py  test_sqlite_store_constraints.py  test_worker_runtime.py
tests/app/: test_cli_curate.py  test_pipeline_cache_integration.py  test_public_site.py  test_worker_runtime.py
tests/curator/: test_curator_orchestrator.py  test_smoke_all_sources_curate.py
tests/feedback/: test_feedback_poller.py  test_feedback_webhook.py  test_formatter_telegram.py
tests/fetcher/: test_adapter_detail_integration.py  test_html_adapters.py  test_orchestrator.py
tests/parser/: test_parser_summarizer.py
(+101 files in other folders)
