[project]
name = "berlin-insider"
version = "0.1.0"
description = "Berlin weekend events fetcher and digest pipeline"
readme = "README.md"
authors = [
    { name = "Yannik", email = "dev.yannik.queisler@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "httpx>=0.28.1",
    "playwright>=1.55.0",
]

[project.scripts]
berlin-insider = "berlin_insider.cli:main"

[dependency-groups]
dev = [
    "click>=8.3.1",
    "pyright>=1.1.408",
    "pysonar>=1.3.0.4086",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
    "ruff>=0.14.14",
    "truststore>=0.10.4",
    "vulture>=2.14",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
